# Resource-allocator

./: .gitignore  Dockerfile  README.md  dashboard.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py
api/: routes.py
core/: agent.py  database.py  environment.py  graders.py  metrics_collector.py  models.py  reward.py  workload_simulator.py
server/: app.py
static/: index.html
